--- a/programs.html
+++ b/programs.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <div class="nav-bar d-flex ps-5 z-1 position-relative align-items-center justify-content-between">
+    <div class="nav-bar d-flex ps-5 z-1 position-fixed top-0 start-0 end-0 align-items-center justify-content-between">
         <div class="logo bg-white px-5 py-2 rounded-pill">
             <img src="assert/eimg/text1.png" style="width: 110px;">
         </div>
@@ -36,7 +36,7 @@
 
     <!--short-->
 
-    <div class="screen d-flex flex-column justify-content-center align-items-center">
+    <div class="screen d-flex flex-column justify-content-center  mt-5 align-items-center">
         
         <div class="row d-flex justify-content-evenly gap-3">
             <div class="tcourse col-lg-3 col-md-5 p-0 my-5 border border-2 rounded-5">
