--- a/programs.html
+++ b/programs.html
@@ -34,6 +34,10 @@
         </div>
     </div> 
 
+    <div style="width:100px" class="position-fixed bot">
+        <img src="assert/eimg/bot.png" class="w-100 p-3">
+    </div>
+
     <!--short-->
 
     <div class="screen d-flex flex-column justify-content-center  mt-5 align-items-center">
