--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,12 @@
             <div class="up py-1 px-3 rounded-pill">Subscribe</div>
         </div>
     </div>
+    
+    <div style="width:80px" class="position-fixed bot">
+        <p class="w-100 quest py-2 py-1 rounded-2 text-center z-3" style="font-size: 12px;">Need things?</p>
+        <img src="assert/bot/head.png" class="w-100 pb-1 bot-head">
+        <img src="assert/bot/body.png" class="w-100 bot-body">
+    </div>
 
     <div class="status-bars position-fixed z-0 d-flex flex-column gap-4 justify-content-center z-0 align-items-center">
         <div class="menus d-flex">
