--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             <a href="contact.html" class="contact">Contact</a>
         </div>
     </div>  
+
+    <div style="width:80px" class="position-fixed bot">
+        <p class="w-100 quest py-2 py-1 rounded-2 text-center z-3" style="font-size: 12px;">Need things?</p>
+        <img src="assert/bot/head.png" class="w-100 pb-1 bot-head">
+        <img src="assert/bot/body.png" class="w-100 bot-body">
+    </div>
     
     <div class="screen d-flex justify-content-center">
         <div class="con1 container row border border-dark border-2 my-4 rounded-5 ">
