--- a/about.html
+++ b/about.html
@@ -32,6 +32,11 @@
             <a href="about.html" class="about" >About</a>
             <a href="contact.html" class="contact">Contact</a>
         </div>
+    </div>
+    <div style="width:80px" class="position-fixed bot">
+        <p class="w-100 quest py-2 py-1 rounded-2 text-center z-3" style="font-size: 12px;">Need things?</p>
+        <img src="assert/bot/head.png" class="w-100 pb-1 bot-head">
+        <img src="assert/bot/body.png" class="w-100 bot-body">
     </div> 
     <div class="screen d-flex justify-content-center mt-5">
         <div class=" col-12 con-s position-relative">
