--- a/programs.html
+++ b/programs.html
@@ -41,7 +41,7 @@
     </div>
 
     <div id="chatarea" class="chat-area z-2 position-fixed end-0 bottom-0 rounded-top-3 flex-column justify-content-between overflow-hidden border border-2  user-select-none" 
-    style="width: 300px;height: 500px;margin-right:60px; display: flex;">
+    style="width: 300px;height: 500px;margin-right:60px;">
         <div style="width:50px" class="position-fixed mini-bot ms-4 mt-5">
             <img src="assert/eimg/bot.png" class="w-100 pb-1 mini-bot">            
         </div>
