--- a/programs.html
+++ b/programs.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-12 d-flex justify-content-between bot-nav">
             <p class="ps-2 py-1 mb-0">Query Bot</p>
-            <div class="pe-2 py-1 mb-0" onclick="ani_bot()">x</div>
+            <div class="pe-2 py-1 mb-0" onclick="aniBot()">x</div>
         </div>
         <div class="col-12 flex-column chat-win d-flex justify-content-end" style="height: 400px;">
             <div class="bot-chats my-2">
